# Barzin_Crypto

./: .env  .gitignore  .railwayignore  .replit  .replit.override  .vercelignore  GUIDE.md  PYTHONANYWHERE_DEPLOYMENT.md  RAILWAY_DEPLOYMENT.md  README.md  VERCEL_DEPLOYMENT.md  always_on_service.py  api_caller.py  api_response.json  api_routes.py  app.py  auto_send_every_2min.py  auto_telegram_api_sender.py  auto_telegram_sender.py  chart_generator.py  convert_favicon.py  cron_report.sh  crontab_setup.sh  demo_ai_features.sh  deploy.sh  english_replacements.py  english_translations.txt  enhanced_telegram_reporter.py  main-simple.py  main.py  main.py.bak  main.py.new  minimal_app.py  models.py  new_ten_minute_reporter.py  package.json  print_simple_test.py  professional_app.py  push_to_github.sh  pyproject.toml  (+125 more)
.config/: README.md
attached_assets/: Pasted-ased-on-the-provided-memories-I-can-explain-how-the-Telegram-bot-was-implemented--1744159323197.txt  Pasted-man-treid-arz-dijital-mikonam-mikham-yek-robat-kheili-sadeh-baray-khodam-besazam-ke-baram-tahlil-kon-1743626443101.txt
crypto_bot/: __init__.py  ai_module.py  ai_routes.py  cache_manager.py  cached_api.py  chart_generator.py  cmc_canada_news.py  commodity_data.py  config.py  crypto_ai_analysis.py  crypto_analysis_routes.py  crypto_analysis_service.py  crypto_news.py  crypto_news_api.py  crypto_quiz_routes.py  crypto_quiz_service.py  database.py  email_notifications.py  email_service.py  formatted_telegram_reporter.py  language_manager.py  market_api.py  market_data.py  market_detector.py  news_analyzer.py  (+18 more)
(+117 files in other folders)
