[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "ccxt>=4.4.72",
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "numpy>=2.2.4",
    "openai>=1.70.0",
    "pandas>=2.2.3",
    "psycopg2-binary>=2.9.10",
    "python-telegram-bot>=22.0",
    "requests>=2.32.3",
    "schedule>=1.2.2",
    "sendgrid>=6.11.0",
    "ta>=0.11.0",
    "trafilatura>=2.0.0",
    "twilio>=9.5.1",
]
